Add jsr305 annotations